# contextual-embeddings

./: README.md  pyproject.toml
contextual_embeddings/: __init__.py
contextual_embeddings/collators/: __init__.py  contextual_collator.py
contextual_embeddings/models/: __init__.py  long_context_model.py  utils.py
contextual_embeddings/training/: __init__.py  contextual_trainer.py  contextual_training.py
scripts/configs/examples/: modernbert.yaml  moderncolbert.yaml
scripts/training/: training.py
tests/models/: test_contextual_inference_model.py  test_contextual_model.py  test_li_inference_model.py
