[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
include = ["contextual_embeddings"]

[project]
name = "contextual_embeddings"
version = "0.0.1"
description = "This is the package used to model contextualized embeddings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "configue>=5.0.0",
    "datasets>=3.2.0",
    "flash-attn==2.7.2.post1",
    "numpy<2",
    "pylate>=1.2.0",
    "sentence-transformers>=3.3.1",
    "torch==2.2.2",
    "transformers>=4.47.1",
    "typer>=0.15.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
